# sims

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOYMENT.md  FLUTTER_IDE_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  deploy.config.example  deploy.sh  docker-compose.prod.yml  docker-compose.yml  remote-cmd.sh  setup-flutter-ide.bat
.github/workflows/: main-update.yaml
docker/: Dockerfile.backend
documents/: README.md  SEDAP-Express ICD v1.0.md  SEDAP_DEMO_GUIDE.md
postgis/: 01-init.sql  02-add-api-fields.sql  03-add-processing-status.sql  99-demo-data.sql  Dockerfile  create_tables.sql  init.sql  initdb.sh
research/: SIMS_Integration_Testing.postman_collection.json  heltec-lora32-v3-pinout.md  heltec-v3-vext-power-fix.md  mesh-network-architecture.md
resources/lora/: Tactical Voice-to-LoRa.md  commands_de.txt  commands_en.txt  lora-performance-and-meshtastic-transport.md
sims-app/: pubspec.yaml
sims-app/lib/: main.dart
sims-app/linux/: CMakeLists.txt
sims-app/test/: widget_test.dart
sims-app/web/: index.html
sims-app/windows/: CMakeLists.txt
sims-backend/: .env.example  .gitignore  README.md  config.py  config.yaml  dashboard.py  generate_token.py  i18n.py  incident_chat.py  integration_dashboard.py  main.py  organizations.py  requeue_audio.py  requirements.txt  responder_portal.py  schedule_summarization.py  theme.py  theme_mockup.html  theme_mockup_hero.html  theme_responder.py  transcription_service.py  websocket.py
sims-backend/audio_codecs/: lpc10_decoder.py
sims-backend/auth/: __init__.py  responder_auth.py
sims-backend/db/: connection.py
sims-backend/endpoints/: contact.py  inbound_webhook.py  incident.py  integration.py  lora.py  organization.py  responder.py
sims-backend/locales/: de.yaml  en.yaml
sims-backend/models/: __init__.py  chat_model.py  contact_model.py  inbound_webhook_model.py  incident_model.py  incident_note_model.py  integration_delivery_model.py  integration_template_model.py  media_model.py  organization_model.py  (+2 more)
sims-mesh-device/: .gitignore  MESH_TECHNOLOGY_README.md  QUICK_START.md  README.md  compile.bat  platformio.ini  test_minimal.cpp
sims-mesh-device-idf/: CMakeLists.txt  _idf_build.py  build.bat  partitions.csv  sdkconfig.defaults
sims-mesh-device-idf/main/: CMakeLists.txt  config.h  display_manager.cpp  display_manager.h  esp_hal.cpp  esp_hal.h  lora_transport.cpp  lora_transport.h  main.cpp  meshtastic_ble.cpp  meshtastic_ble.h  meshtastic_encoder.cpp  meshtastic_encoder.h  meshtastic_test.h  ssd1306.cpp  ssd1306.h
sims-mesh-device-idf/main/mesh/: mesh_protocol.cpp  mesh_protocol.h
sims-mesh-device-idf/main/sensors/: gps_service.cpp  gps_service.h
sims-mesh-device-idf/main/storage/: message_storage.cpp  message_storage.h
sims-smart/: .gitignore  BASELINE_STATUS.md  ESP32-SR_INSTALLATION.md  ESP32-SR_STATUS.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  TEST_README.md  platformio.ini
sims-smart-espidf/: .gitignore  CMakeLists.txt  README.md  _build.bat  build.bat  partitions.csv  sdkconfig.defaults
sims-smart-espidf/components/libwebp/: CMakeLists.txt
sims-smart-espidf/components/libwebp/src/utils/: utils.c
sims-smart-espidf/main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  main.cpp
sims-smart-espidf/main/codec/: lpc10_codec.cpp  lpc10_codec.h
sims-smart-espidf/main/display/: display_manager.cpp  display_manager.h  ssd1306.cpp
sims-smart-espidf/main/input/: button_handler.cpp  button_handler.h
sims-smart-espidf/main/led/: led_feedback.cpp  led_feedback.h
sims-smart-espidf/main/mesh/: mesh_ble_client.cpp  mesh_ble_client.h  mesh_packet_encoder.cpp  mesh_packet_encoder.h
sims-smart-espidf/main/network/: http_client.cpp  http_client.h  wifi_service.cpp  wifi_service.h
sims-smart-espidf/main/power/: power_manager.cpp  power_manager.h
sims-smart-espidf/main/sensors/: audio_service.cpp  audio_service.h  camera_service.cpp  camera_service.h  gps_service.cpp  gps_service.h
sims-smart-espidf/main/storage/: nvs_storage.cpp  nvs_storage.h
sims-smart-espidf/main/voice/: command_parser.cpp  command_parser.h  wake_word_service.cpp  wake_word_service.h
(+152 files in other folders)
